# apps/auth-services/src/controller/auth.controller.ts
@@ -1,5 +1,5 @@
 import { NextFunction, Request, Response } from "express";
-import { checkOtpRestriction, sendOtp, trackOtpRequests, validateRegistrationData, verifyOtp } from "../utils/auth.helper";
+import { checkOtpRestriction, handleForgotPassword, sendOtp, trackOtpRequests, validateRegistrationData, verifyForgotPasswordOtp, verifyOtp } from "../utils/auth.helper";
 import prisma from "../../../../packages/libs/prisma";
 import { AuthError, ValidationError } from "../../../../packages/error-handler";
 import bcrypt from "bcryptjs"
@@ -120,5 +120,54 @@ export const loginUser = async (req:Request, res:Response, next:NextFunction) =>
 
     } catch (error) {
         return next (error);
+    }
+}
+
+//user forgot password
+
+export const userForgotPassword = async (req:Request, res:Response, next: NextFunction) => {
+    await handleForgotPassword (req, res, next, 'user');
+}
+
+//Verify forgot password otp
+
+export const verifyUserForgotPassword = async (req:Request, res:Response, next:NextFunction) => {
+    await verifyForgotPasswordOtp(req, res, next);
+}
+
+// Reset user password
+
+export const resetUserPassword = async (req:Request, res:Response, next:NextFunction) => {
+    try {
+        const {email, newPassword} =req.body;
+
+         if(!email || !newPassword){
+            return next(new ValidationError("Email and password required"))
+        }
+
+        const user = await prisma.users.findUnique({where: {email}});
+        if(!user) return next (new ValidationError("User not found"))
+
+        const isSamePassword = await bcrypt.compare(newPassword, user.password!);
+
+        if(isSamePassword){
+            return next(new ValidationError("New password cannot be same as old password"));
+        }
+
+        // hash the new password again
+
+        const hashedPassword = await bcrypt.hash(newPassword, 10);
+
+        await prisma.users.update({
+            where: {email},
+            data: {password: hashedPassword},
+        })
+
+        res.status(200).json({
+            message: "Password reset successfully!"
+        })
+
+    } catch (error) {
+        next(error);
     }
 }
